--- a/14_em_rem.html
+++ b/14_em_rem.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Em & Rem Units</title>
   <style>
-    /* #box-1 {
+    #box-1 {
       font-size: 20px;
     }
 
@@ -17,14 +18,16 @@
 
     #box-1 ul {
       font-size: 1.2em;
-    } */
+    }
 
+    /* Same as setting root to 10px */
+    /* Easier to use rem. (1.6rem = 16px) */
     html {
       font-size: 62.5%;
     }
 
     #box-2 h3 {
-      font-size: 2.3rem;
+      font-size: 2rem;
     }
 
     #box-2 p {
@@ -33,10 +36,12 @@
     }
   </style>
 </head>
+
 <body>
-  <!-- <div id="box-1">
+  <div id="box-1">
     <h3>Box One</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi deserunt praesentium dignissimos officia dicta corporis debitis architecto consequuntur incidunt libero.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi deserunt praesentium dignissimos officia dicta
+      corporis debitis architecto consequuntur incidunt libero.</p>
     <ul>
       <li>1</li>
       <li>2</li>
@@ -45,20 +50,22 @@
           <li>1</li>
           <li>2</li>
           <li>3
-              <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-              </ul>
-            </li>
+            <ul>
+              <li>1</li>
+              <li>2</li>
+              <li>3</li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li>4</li>
     </ul>
-  </div> -->
+  </div>
   <div id="box-2">
     <h3>Box Two</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi deserunt praesentium dignissimos officia dicta corporis debitis architecto consequuntur incidunt libero.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi deserunt praesentium dignissimos officia dicta
+      corporis debitis architecto consequuntur incidunt libero.</p>
   </div>
 </body>
+
 </html>
