--- a/13_media_queries.html
+++ b/13_media_queries.html
@@ -19,54 +19,11 @@
     h1 {
       display: none;
     }
-
-    /* Smartphones */
-    @media(max-width: 500px) {
-      body {
-        background: red;
-      }
-
-      #smartphone h1 {
-        display: block;
-      }
-    }
-
-    /* Tablet */
-    @media(min-width: 501px) and (max-width: 768px) {
-      body {
-        background: blue;
-      }
-
-      #tablet h1 {
-        display: block;
-      }
-    }
-
-    /* Normal */
-    @media(min-width: 769px) and (max-width: 1200px) {
-      body {
-        background: green;
-      }
-
-      #normal h1 {
-        display: block;
-      }
-    }
-
-    /* Widescreen */
-    @media(min-width: 1201px) {
-      body {
-        background: black;
-      }
-
-      #widescreen h1 {
-        display: block;
-      }
-    }
-
-    /* Landscape */
   </style>
-  <!-- <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css"> -->
+
+  <!-- Will only load this style sheet if the screen is 768px width or less -->
+  <!-- Always add this AFTER the main stylesheet -->
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
 </head>
 
 <body>
