--- a/16_flex_basics.html
+++ b/16_flex_basics.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
   <style>
     #container {
       display: flex;
-      flex-direction: row;
+      /* flex-direction: row; */
+      /* flex-direction: row-reverse; */
       /* flex-direction: column; */
       flex-wrap: wrap;
-      /* flex-flow: row nowrap; */
+      flex-flow: row wrap;
     }
 
     .item {
@@ -28,24 +30,58 @@
     }
   </style>
 </head>
+
 <body>
   <div id="container">
-    <div class="item"><h3>Item 1</h3></div>
-    <div class="item"><h3>Item 2</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
-    <div class="item"><h3>Item 3</h3></div>
+    <div class="item">
+      <h3>Item 1</h3>
+    </div>
+    <div class="item">
+      <h3>Item 2</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
+    <div class="item">
+      <h3>Item 3</h3>
+    </div>
   </div>
 </body>
+
 </html>
