--- a/17_flex_align.html
+++ b/17_flex_align.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,8 @@
     #container {
       background: #555;
       display: flex;
-      flex-wrap: wrap;
+      /* flex-wrap: wrap; */
+
       /* Align items horizontal */
       justify-content: space-evenly;
       /*  
@@ -21,10 +23,12 @@
             space-around
             space-evenly 
         */
-        height: 600px;
-        /* Align items vertical (must be height) */
-        align-items: baseline;
-        /*  
+
+      height: 600px;
+
+      /* Align items vertical (must be height) */
+      align-items: flex-start;
+      /*  
             OPTIONS:
             flex-start 
             flex-end 
@@ -32,9 +36,10 @@
             baseline
             stretch
         */
-        /* Align items vertical where extra space */
-        align-content: space-between;
-        /*  
+
+      /* Align items vertical where extra space */
+      align-content: space-between;
+      /*  
             OPTIONS:
             flex-start 
             flex-end 
@@ -66,22 +71,31 @@
     .item-3 {
       order: 1;
     }
-    
+
     .item {
-        background: #f4f4f4;
-        border: #ccc solid 1px;
-        text-align: center;
-        padding: 1rem;
-        margin: 0.5rem;
-        flex-basis: 200px;
-      }
+      background: #f4f4f4;
+      border: #ccc solid 1px;
+      text-align: center;
+      padding: 1rem;
+      margin: 0.5rem;
+      flex-basis: 200px;
+      /* gives items a width */
+    }
   </style>
 </head>
+
 <body>
   <div id="container">
-    <div class="item item-1"><h3>Item 1</h3></div>
-    <div class="item item-2"><h3>Item 2</h3></div>
-    <div class="item item-3"><h3>Item 3</h3></div>
+    <div class="item item-1">
+      <h3>Item 1</h3>
+    </div>
+    <div class="item item-2">
+      <h3>Item 2</h3>
+    </div>
+    <div class="item item-3">
+      <h3>Item 3</h3>
+    </div>
   </div>
 </body>
+
 </html>
